# hackmap

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  shell.nix  socket_server.py
contrib/: entrypoint.sh
hackmap/: asgi.py  context_processors.py  local_settings.py.tmpl  settings.py  urls.py  wsgi.py
labdash/: admin.py  apps.py  models.py  urls.py  views.py
labdash/migrations/: 0001_initial.py  0002_auto_20161209_2252.py  0003_auto_20161213_2022.py  0004_auto_20161214_0152.py  0005_buttongroup_priority.py  0006_action_retain.py  0007_slider_slideraction.py  0008_button_topic.py  0009_buttongroup_width.py  0010_remove_slideraction_slider_alter_action_id_and_more.py  0011_alter_buttongroup_tile_width.py  0012_remove_buttongroup_lighttext.py  0013_button_href.py  0014_alter_button_href.py  0015_add_buttongroup_hide.py
labmap/: apps.py  mqtt.py  views.py
labprinter/: admin.py  apps.py  models.py  views.py
labprinter/migrations/: 0001_initial.py  0002_printer_color.py
scripts/: deploy.sh
static/css/: base.css  control.css  lights.css  map.css  metro-bootstrap.css  printers.css
static/js/: control.js  lights.js  map.js  printers.js
templates/: base.html  lights.html  map.html
templates/labdash/: buttongroup_list.html
templates/labprinter/: printer_list.html
