[tool.poetry]
name = "hackmap"
version = "0.1.0"
description = "Map for edinburgh hacklab"
authors = ["Aria Shrimpton <me@aria.rip>"]
license = "AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-vite = "^3.0.4"
websockets = "^13.0"
asyncio-paho = "^0.6.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
